2019-04-26      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/gm2-libs-ch/Selective.c:  fixed copyright notice.
          Also removed references to p2c and added GCC header
          config and portable include files.  Tidied up comments
	  and made them GNU complient.
	* libgm2/libpim/Selective.c:  fixed copyright notice.
          Tidied up comments and made them GNU complient.

2019-04-25      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/gm2-compiler/M2MetaError.def:  (MetaErrorT0)
          declare and export.
	* gm2/gm2-compiler/M2MetaError.mod:  (pop) copy
          the error type back to the caller.   (MetaErrorT0)
          new procedure.
	* gm2/gm2-compiler/M2Range.mod:  import (MetaErrorT0)
          and replace MetaErrorT1 with MetaErrorT0.  Ensure that
          all warnings are have the 'W' format specifier.
	  Ensure that all errors use 'E' for consistency.

2019-04-24      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/gm2-compiler/M2GenGCC.mod:  (DescribeError)
          corrected symbol numbers.
	* gm2/gm2-compiler/M2MetaError.def:  large number of
          additions new format specifiers 'S', 'T', 'u', 'k'.
	* gm2/gm2-compiler/M2MetaError.mod:  much debugging code
          added and bug fixes for color changes implemented.
          Also implemented the above format specifiers.
	* gm2/gm2-compiler/M2Quads.mod:  (FailParameter) and
	  (WarnParameter) use new format specifiers in M2MetaError.

2019-04-23      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/gm2-compiler/M2MetaError.def:  added MetaErrorString0.
	* gm2/gm2-compiler/M2MetaError.mod:  many bug fixes which
          implement coloring when concatenating strings.
	* gm2/gm2-compiler/M2Students.mod:
          (CheckForVariableThatLooksLikeKeyword) New procedure.
          (PerformVariableKeywordCheck) reimplemented to use
          MetaErrorString0.
	* gm2/gm2-compiler/SymbolTable.mod:  reimplemented
	  CheckForSymbols using the MetaError substructure.
